# transformer-results

./: dataset.py  explore_datasets.ipynb  graps-ml.ipynb  graps.ipynb  graps_transformer.ipynb  out-1.out  out0.out  out1.out  out3.out  out5.out  out6.out  pyproject.toml  stats.ods
.ipynb_checkpoints/: graps-checkpoint.ipynb
roberta-1204/: out0.out  out1.out  out3.out  out6.out
roberta-1602/: out1.out
roberta-2504/: out5.out  out6.out
roberta-2504-fix/: out0.out  out1.out  out3.out  out4.out
roberta-2603/: out0.out  out1.out  out3.out
