[tool.poetry]
name = "transformer-results"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.11"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
jupyterlab_server = "^2.3.0"
jupyter_server = "^1.4.1"
nbclassic = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
